Added env options - draft